@startuml

title __PERSONS's Class Diagram__\n

  package model {
    package model.persons {
      class BankManager {
          - password : String
          - managerName : String
          + BankManager()
          + getPassword()
          + verifyPassword()
          + getUsername()
          + setPassword()
      }
    }
  }
  

  package model {
    package model.persons {
      interface Loginable {
          {abstract} + getUsername()
          {abstract} + verifyPassword()
          {abstract} + setPassword()
      }
    }
  }
  

  package model {
    package model.persons {
      class User {
          - name : String
          - username : String
          - password : String
          - accounts : ArrayList<Account>
          - date : Date
          - transactions : ArrayList<Transaction>
          - messages : ArrayList<Message>
          + User()
          + getName()
          + getUsername()
          + getPassword()
          + verifyPassword()
          + setPassword()
          + getNetTotal()
          + getDateOfCreation()
          + getAccounts()
          + logEmpty()
          + getMostRecentTransaction()
          + setPrimaryCheuqingAccount()
          + getPrimaryChequingAccount()
          + addAccount()
          + addTransaction()
          + getMessages()
          + addMessage()
          + removeMessage()
      }
    }
  }
  

  BankManager -up-|> Loginable
  BankManager o-- BankSystem : bankSystem
  User -up-|> Loginable
  User o-- BankSystem : machine
  User o-- ChequingAccount : primaryAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
